<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/resultEdit"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:textSize="80sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn07"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn07Click"
                android:text="@string/btn_07" />

            <Button
                android:id="@+id/btn08"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn08Click"
                android:text="@string/btn_08" />

            <Button
                android:id="@+id/btn09"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn09Click"
                android:text="@string/btn_09" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnAddClick"
                android:text="@string/btn_Add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn04"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn04Click"
                android:text="@string/btn_04" />

            <Button
                android:id="@+id/btn05"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn05Click"
                android:text="@string/btn_05" />

            <Button
                android:id="@+id/btn06"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn06Click"
                android:text="@string/btn_06" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnMinusClick"
                android:text="@string/btn_Minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn01"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn01Click"
                android:text="@string/btn_01" />

            <Button
                android:id="@+id/btn02"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn02Click"
                android:text="@string/btn_02" />

            <Button
                android:id="@+id/btn03"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn03Click"
                android:text="@string/btn_03" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnDivideClick"
                android:text="@string/btn_Divide" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnClearClick"
                android:text="@string/btn_Clear" />

            <Button
                android:id="@+id/btn00"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn00Click"
                android:text="@string/btn_00" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnDotClick"
                android:text="@string/btn_Dot" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnMultiplyClick"
                android:text="@string/btn_Multiply" />
        </LinearLayout>

        <Button
            android:id="@+id/btnResult"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:textSize="20dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="btnResultClick"
            android:text="@string/btn_Result" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>